prevent refresh on mobile

--- a/client/src/components/nav/nav.css
+++ b/client/src/components/nav/nav.css
@@ -190,6 +190,7 @@
 .mobile-nav-links {
   list-style-type: none;
   padding: 0;
+  cursor: pointer;
   margin: 0;
 }
 
@@ -197,7 +198,7 @@
   padding: 0 0 25px 30px;
 }
 
-.mobile-nav-links a {
+.mobile-nav-links span {
   text-decoration: none;
   color: var(--white);
   font-size: 1.1rem;
@@ -257,5 +258,6 @@
     width: 125px;
     height: auto;
     padding: 0;
+    cursor: default;
   }
 }
